[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Katana.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Bounce.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Sound Effects_Land2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Sound Effects_Land3.wav" type="AudioStream" id=5]

[node name="Katana" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Hilt" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hilt"]
polygon = PoolVector2Array( -2, -20, 1, -20, 1, -9, 3, -9, 3, -8, -4, -8, -4, -9, -2, -9 )

[node name="Blade" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Blade"]
polygon = PoolVector2Array( -2, 19, -1, 19, -1, 18, 0, 18, 0, 16, 1, 16, 1, -8, -2, -8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.5, -0.5 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -2, -20, 1, -20, 1, -9, 3, -9, 3, -8, 1, -8, 1, 16, 0, 16, 0, 18, -1, 18, -1, 19, -2, 19, -1.95927, -8, -4, -8, -4, -9, -2, -9 )
disabled = true

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.1

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 0.5

[connection signal="body_entered" from="Hilt" to="." method="_on_Hilt_body_entered"]
[connection signal="body_entered" from="Blade" to="." method="_on_Blade_body_entered"]
[connection signal="body_exited" from="Blade" to="." method="_on_Blade_body_exited"]
